fixed spacing ontext

--- a/css/example.css
+++ b/css/example.css
@@ -1,11 +1,23 @@
 .divphoto{
   width:100%;
   height:100%;
-  border-radius: 0px 15px 15px 0px;
-  border:2px solid #fff;
+
   margin-left: 3%;
+
+  border:2px solid #fff;
   filter: drop-shadow(0 0 0.75rem white);
+  border-radius: 0px 15px 15px 0px;
 }
+
+img{
+
+}
+
+#help{
+  padding-left: 1.5%;
+}
+
+
 
 .row{
   background-color: #62929e;
