--- a/css/homeCSS.css
+++ b/css/homeCSS.css
@@ -18,7 +18,7 @@
 }
 
 #homeText{
-  font-size: 270px;
+  font-size: 200px;
 }
 
 body{
