--- a/css/krista.css
+++ b/css/krista.css
@@ -18,3 +18,7 @@
   width: 100%;
   color: white;
 }
+
+#help{
+  padding-left: 1.5%;
+}
